Permanent labels - css fix for z-index on tableview.

--- a/public/css/_tableview.scss
+++ b/public/css/_tableview.scss
@@ -5,6 +5,8 @@
     display: grid;
     grid-template-columns: 57px 1fr;
     grid-template-rows: 6px 50px 1fr;
+    z-index:1000; /* to hide static labels outside map */
+    background-color: white; /* to hide static labels outside map*/
 
     .btn_column {
         grid-row: 2/4;
