--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -156,7 +156,11 @@
   grid-row: 2;
   display: grid;
   grid-template-columns: 57px 1fr;
-  grid-template-rows: 6px 50px 1fr; }
+  grid-template-rows: 6px 50px 1fr;
+  z-index: 1000;
+  /* to hide static labels outside map */
+  background-color: white;
+  /* to hide static labels outside map*/ }
   .tableview .btn_column {
     grid-row: 2/4; }
   .tableview .nav_bar {
